<resources>
    <string name="app_name">Cafe Casa</string>
    <string name="login_error">Hubo un problema al iniciar sesión</string>
    <string name="title_activity_main">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hot_drinks">Bebidas Calientes</string>
    <string name="opcion_invalida">Opcion de menu invalida</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok_btn">Agregar</string>
    <string name="cantidad_invalida">Debes elegir una cantidad de una hacia arriba</string>
    <string name="go_cart">Ir al carrito</string>
    <string name="cart_title">Carrito</string>
    <string name="total">Total: Q</string>
    <string name="pagar">Ordenar</string>
    <string name="a_nombre">A nombre de:</string>
    <string name="oficina">Número de oficina</string>
</resources>
