<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".menu.ui.MenuActivity"
    android:padding="8dp"
    tools:showIn="@layout/app_bar_main">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/cart_title"
        android:layout_marginBottom="8dp"
        android:text="@string/cart_title"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_below="@id/cart_title"
        android:layout_height="match_parent"
        android:layout_above="@id/paybtn"
        android:layout_marginBottom="8dp"
        android:id="@+id/recycler_cart"></android.support.v7.widget.RecyclerView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/pagar"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginRight="20dp"
        android:id="@+id/paybtn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignTop="@id/total_mount"
        android:id="@+id/total_title"
        android:layout_toLeftOf="@id/total_mount"
        android:text="@string/total"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:id="@+id/total_mount"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0.00"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>