<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imagen_dialog"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombre_dialog"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@id/imagen_dialog"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre_dialog"
        android:id="@+id/precio_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0.00"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/cantidades"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/precio_dialog"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:id="@+id/remove_dialog"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/round_remove_circle_black_48"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="30dp"
            android:id="@+id/monto_dialog"
            android:text="1"
            android:textAlignment="center" />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/add_dialog"
            android:layout_height="wrap_content"
            android:src="@drawable/round_add_circle_black_48"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cantidades"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ok_dialog"
            android:text="@string/ok_btn"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancelar"
            android:id="@+id/cancel_dialog"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>